force-app/main/default/objects/Master_Payment_Schedule__c/fields/Block__c.field-meta.xml
<CustomField>
    <fullName>Block__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Block</label>
    <referenceTo>Block__c</referenceTo>
    <relationshipLabel>Master Payment Schedules</relationshipLabel>
    <relationshipName>Master_Payment_Schedules</relationshipName>
    <type>Lookup</type>
</CustomField>