force-app/main/default/objects/Master_Payment_Schedule__c/fields/Is_Construction__c.field-meta.xml
<CustomField>
    <fullName>Is_Construction__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Construction</label>
    <type>Checkbox</type>
</CustomField>