force-app/main/default/objects/Master_Payment_Schedule__c/fields/Is_Land__c.field-meta.xml
<CustomField>
    <fullName>Is_Land__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Land</label>
    <type>Checkbox</type>
</CustomField>