force-app/main/default/objects/Master_Payment_Schedule__c/fields/Is_Last_Master_Payment_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Is_Last_Master_Payment_Schedule__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Last Master Payment Schedule</label>
    <type>Checkbox</type>
</CustomField>