force-app/main/default/objects/Master_Payment_Schedule__c/fields/Payment_Percent__c.field-meta.xml
<CustomField>
    <fullName>Payment_Percent__c</fullName>
    <label>Payment Percent</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>