force-app/main/default/objects/Master_Payment_Schedule__c/fields/Payment_Plan__c.field-meta.xml
<CustomField>
    <fullName>Payment_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment Plan</label>
    <referenceTo>Payment_Plan__c</referenceTo>
    <relationshipLabel>Master Payment Schedules</relationshipLabel>
    <relationshipName>Master_Payment_Schedules</relationshipName>
    <type>Lookup</type>
</CustomField>