force-app/main/default/objects/Master_Payment_Schedule__c/validationRules/Completed_Date_Manadatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Completed_Date_Manadatory</fullName>
    <active>true</active>
    <errorConditionFormula>TEXT(Status__c) = &apos;Completed&apos; &amp;&amp; ISBLANK(Completed_Date__c)</errorConditionFormula>
    <errorDisplayField>Completed_Date__c</errorDisplayField>
    <errorMessage>Please Select Completed Date</errorMessage>
</ValidationRule>