force-app/main/default/objects/Master_Payment_Schedule__c/validationRules/Restrict_is_Land_and_is_Constriction.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_is_Land_and_is_Constriction</fullName>
    <active>true</active>
    <errorConditionFormula>(TEXT( Project__r.Project_Type__c ) == &apos;	Apartments&apos;
||
TEXT(Block__r.Type__c) == &apos;Apartments&apos;  
	||
TEXT(Block__r.Type__c) == &apos;Row House&apos;  
	)
&amp;&amp;  (Is_Construction__c == true ||  Is_Land__c == true)</errorConditionFormula>
    <errorMessage>Is Land’ or ‘Is Construction’ should be selected only for Vila projects</errorMessage>
</ValidationRule>