force-app/main/default/objects/Master_Payment_Schedule__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>S_No__c</columns>
    <columns>Project__c</columns>
    <columns>Block__c</columns>
    <columns>Status__c</columns>
    <columns>Payment_Percent__c</columns>
    <columns>Is_Land__c</columns>
    <columns>Is_Construction__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>