force-app/main/default/objects/Master_Payment_Schedule__c/listViews/Copy_of_Trifecta_Veranza_Tower_A.listView-meta.xml
<ListView>
    <fullName>Copy_of_Trifecta_Veranza_Tower_A</fullName>
    <columns>NAME</columns>
    <columns>S_No__c</columns>
    <columns>Project__c</columns>
    <columns>Block__c</columns>
    <columns>Status__c</columns>
    <columns>Payment_Percent__c</columns>
    <columns>Is_Land__c</columns>
    <columns>Is_Construction__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Project__c</field>
        <operation>equals</operation>
        <value>Trifecta Veranza</value>
    </filters>
    <filters>
        <field>Block__c</field>
        <operation>equals</operation>
        <value>Veranza Tower A</value>
    </filters>
    <label>Trifecta Veranza Tower A</label>
</ListView>