force-app/main/default/objects/Master_Payment_Schedule__c/listViews/Trifecta_Vanto_Tower_C.listView-meta.xml
<ListView>
    <fullName>Trifecta_Vanto_Tower_C</fullName>
    <columns>NAME</columns>
    <columns>S_No__c</columns>
    <columns>Project__c</columns>
    <columns>Block__c</columns>
    <columns>Status__c</columns>
    <columns>Payment_Percent__c</columns>
    <columns>Is_Land__c</columns>
    <columns>Is_Construction__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Project__c</field>
        <operation>equals</operation>
        <value>Trifecta Vanto</value>
    </filters>
    <filters>
        <field>Block__c</field>
        <operation>equals</operation>
        <value>Vanto C</value>
    </filters>
    <label>Trifecta Vanto Tower C</label>
</ListView>