force-app/main/default/objects/Master_Payment_Schedule__c/listViews/TVER_Row_House_Phase_3.listView-meta.xml
<ListView>
    <fullName>TVER_Row_House_Phase_3</fullName>
    <columns>NAME</columns>
    <columns>S_No__c</columns>
    <columns>Project__c</columns>
    <columns>Block__c</columns>
    <columns>Status__c</columns>
    <columns>Payment_Percent__c</columns>
    <columns>Is_Land__c</columns>
    <columns>Is_Construction__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Project__c</field>
        <operation>equals</operation>
        <value>Trifecta Verde En Resplandor</value>
    </filters>
    <filters>
        <field>Block__c</field>
        <operation>equals</operation>
        <value>TVER Row House Phase 3</value>
    </filters>
    <label>TVER Row House Phase 3</label>
</ListView>